--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-asgiref==3.5.2
+asgiref==3.7.2
 certifi==2022.6.15
+coverage==7.6.0
 distlib==0.3.5
 Django==4.0.6
+django-cors-headers==4.3.1
 djangorestframework==3.14.0
 filelock==3.4.2
 platformdirs==2.6.2
@@ -11,4 +13,3 @@ sqlparse==0.4.2
 tzdata==2022.1
 virtualenv==20.15.1
 virtualenv-clone==0.5.7
-
